k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: expense-tracker-api
spec:
    replicas: 1
    selector:
        matchLabels:
            app: expense-tracker-api
    template:
        metadata:
            labels:
                app: expense-tracker-api
        spec:
            containers:
                - name: expense-tracker-api
                  image: 706447098461.dkr.ecr.us-east-1.amazonaws.com/expense-tracker-api:latest

                  ports:
                      - containerPort: 3001
                  readinessProbe:
                      httpGet:
                          path: /api/ping
                          port: 3001
                      initialDelaySeconds: 10
                      periodSeconds: 5
                  resources:
                      requests:
                          memory: "256Mi"
                          cpu: "100m"
                      limits:
                          memory: "512Mi"
                          cpu: "200m"
