k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: expense-tracker-api
spec:
    selector:
        app: expense-tracker-api
    ports:
        - protocol: TCP
          port: 3001
          targetPort: 3001
    type: ClusterIP
